Colaboratory를 통해 생성됨

--- a/BP_05_EX_Ch10.ipynb
+++ b/BP_05_EX_Ch10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQB+sUsdVQiECCf/Hpf/FE",
+      "authorship_tag": "ABX9TyOeMzL2zxlzlFVlOeA57Zj6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,7 +210,7 @@
         "    lab.pack(side=LEFT)\n",
         "    ent.pack(side=RIGHT, expand=YES, fill=X)\n",
         "    entries.append((field, ent))\n",
-        " return entries\n",
+        "  return entries\n",
         "\n",
         "root = Tk()\n",
         "ents = makeform(root, fields)\n",
@@ -220,7 +220,7 @@
         "b1.pack(side=LEFT, padx=5, pady=5)\n",
         "b2 = Button(root, text='종료하기', command=root.quit)\n",
         "b2.pack(side=LEFT, padx=5, pady=5)\n",
-        "root.mainloop()"
+        "root.mainloop()\n"
       ],
       "metadata": {
         "id": "nraCV6thZI_8"
