Colaboratory를 통해 생성됨

--- a/BP_05_EX_Ch10.ipynb
+++ b/BP_05_EX_Ch10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOeMzL2zxlzlFVlOeA57Zj6",
+      "authorship_tag": "ABX9TyPQSr02/7GRbVtjhJKwO53z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,7 +100,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import random\n",
+        "import random    #랜덤 모듈 사용\n",
         "from tkinter import *\n",
         "\n",
         "window = Tk()\n",
@@ -112,7 +112,7 @@
         "  global num_guesses\n",
         "  guess = int(entry.get())\n",
         "  num_guesses += 1\n",
-        "  if guess == secret_number:\n",
+        "  if guess == secret_number:           #추측이 맞을시에 \"축하합니다!!\"\"\n",
         "      message = \"축하합니다!!\"\n",
         "  elif guess < secret_number:\n",
         "    message = \"너무 낮아요!!\"\n",
@@ -153,7 +153,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from tkinter import *\n",
+        "from tkinter import * #tkinter 모듈을 이용\n",
         "\n",
         "def do_convert():\n",
         " inch_val = float(cvt_from.get())\n",
@@ -191,7 +191,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from tkinter import *\n",
+        "from tkinter import *                #tkinter 모듈을 이용\n",
         "fields = '이름', '직업', '국적'\n",
         "\n",
         "def fetch(entries):\n",
@@ -231,8 +231,8 @@
     {
       "cell_type": "code",
       "source": [
-        "from random import *\n",
-        "from tkinter import *\n",
+        "from random import *         #랜덤 모듈을 이용\n",
+        "from tkinter import *        #tkinter 모듈을 이용\n",
         "\n",
         "# 선택 하는 부분\n",
         "def user_choice_rock():\n",
